...
                                                    <rect key="frame" x="350" y="11" width="44" height="44"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="8Xa-B7-cGz"/>
                                                        <constraint firstAttribute="height" constant="44" id="Nt8-Nh-FJ4"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="likeOn"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked:" destination="oIL-Tw-fl9" eventType="touchUpInside" id="U6i-CR-0hz"/>
                                                    </connections>
                                                </button>
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient" translatesAutoresizingMaskIntoConstraints="NO" id="Aia-1a-C6M">
                                                    <rect key="frame" x="20" y="128" width="374" height="30"/>
...
                                    <constraint firstItem="ONx-pQ-BBx" firstAttribute="trailing" secondItem="EC8-oa-Kzc" secondAttribute="trailing" id="KCS-KG-mnG"/>
                                    <constraint firstItem="ONx-pQ-BBx" firstAttribute="bottom" secondItem="EC8-oa-Kzc" secondAttribute="bottom" id="Wv7-Ty-vl7"/>
                                </constraints>
                                <viewLayoutGuide key="contentLayoutGuide" id="EC8-oa-Kzc"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="Qcb-5d-W9e"/>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oT7-Sg-GhE" userLabel="singleImageBackButton">
                                <rect key="frame" x="9" y="10" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="singleImageBackButton" label="singleImageBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="Cuv-ZU-VMv"/>
                                    <constraint firstAttribute="width" constant="24" id="jnJ-jb-Ctm"/>
                                </constraints>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="authLogo" translatesAutoresizingMaskIntoConstraints="NO" id="MCV-yF-jda">
                                <rect key="frame" x="177" y="425" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZsP-q1-3eE" userLabel="AuthenticateButton">
                                <rect key="frame" x="16" y="703" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="AuthenticateButton" label="AuthenticateButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Pqn-vx-RBK"/>
                                </constraints>
...
